// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESLint calculated config Snapshot > .js 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "globals": {
      "AbortController": false,
      "AbortSignal": false,
      "Blob": false,
      "BroadcastChannel": false,
      "Buffer": false,
      "ByteLengthQueuingStrategy": false,
      "CompressionStream": false,
      "CountQueuingStrategy": false,
      "Crypto": false,
      "CryptoKey": false,
      "CustomEvent": false,
      "DOMException": false,
      "DecompressionStream": false,
      "Event": false,
      "EventTarget": false,
      "File": false,
      "FormData": false,
      "Headers": false,
      "Intl": false,
      "MessageChannel": false,
      "MessageEvent": false,
      "MessagePort": false,
      "PerformanceEntry": false,
      "PerformanceMark": false,
      "PerformanceMeasure": false,
      "PerformanceObserver": false,
      "PerformanceObserverEntryList": false,
      "PerformanceResourceTiming": false,
      "ReadableByteStreamController": false,
      "ReadableStream": false,
      "ReadableStreamBYOBReader": false,
      "ReadableStreamBYOBRequest": false,
      "ReadableStreamDefaultController": false,
      "ReadableStreamDefaultReader": false,
      "Request": false,
      "Response": false,
      "SubtleCrypto": false,
      "TextDecoder": false,
      "TextDecoderStream": false,
      "TextEncoder": false,
      "TextEncoderStream": false,
      "TransformStream": false,
      "TransformStreamDefaultController": false,
      "URL": false,
      "URLSearchParams": false,
      "WebAssembly": false,
      "WritableStream": false,
      "WritableStreamDefaultController": false,
      "WritableStreamDefaultWriter": false,
      "__dirname": false,
      "__filename": false,
      "atob": false,
      "btoa": false,
      "clearImmediate": false,
      "clearInterval": false,
      "clearTimeout": false,
      "console": false,
      "crypto": false,
      "exports": true,
      "fetch": false,
      "global": false,
      "module": false,
      "performance": false,
      "process": false,
      "queueMicrotask": false,
      "require": false,
      "setImmediate": false,
      "setInterval": false,
      "setTimeout": false,
      "structuredClone": false,
    },
    "parser": "espree",
    "parserOptions": {},
    "sourceType": "module",
  },
  "plugins": [
    "@",
    "simple-import-sort",
    "redos",
    "unicorn:eslint-plugin-unicorn",
    "regexp:eslint-plugin-regexp",
    "jest:eslint-plugin-jest",
  ],
  "rules": {
    "@babel/object-curly-spacing": [
      0,
    ],
    "@babel/semi": [
      0,
    ],
    "@typescript-eslint/block-spacing": [
      0,
    ],
    "@typescript-eslint/brace-style": [
      0,
    ],
    "@typescript-eslint/comma-dangle": [
      0,
    ],
    "@typescript-eslint/comma-spacing": [
      0,
    ],
    "@typescript-eslint/func-call-spacing": [
      0,
    ],
    "@typescript-eslint/indent": [
      0,
    ],
    "@typescript-eslint/key-spacing": [
      0,
    ],
    "@typescript-eslint/keyword-spacing": [
      0,
    ],
    "@typescript-eslint/lines-around-comment": [
      0,
    ],
    "@typescript-eslint/member-delimiter-style": [
      0,
    ],
    "@typescript-eslint/no-extra-parens": [
      0,
    ],
    "@typescript-eslint/no-extra-semi": [
      0,
    ],
    "@typescript-eslint/object-curly-spacing": [
      0,
    ],
    "@typescript-eslint/quotes": [
      0,
    ],
    "@typescript-eslint/semi": [
      0,
    ],
    "@typescript-eslint/space-before-blocks": [
      0,
    ],
    "@typescript-eslint/space-before-function-paren": [
      0,
    ],
    "@typescript-eslint/space-infix-ops": [
      0,
    ],
    "@typescript-eslint/type-annotation-spacing": [
      0,
    ],
    "accessor-pairs": [
      0,
    ],
    "array-bracket-newline": [
      0,
      "consistent",
    ],
    "array-bracket-spacing": [
      0,
      "never",
    ],
    "array-callback-return": [
      2,
      {
        "allowImplicit": true,
        "allowVoid": false,
        "checkForEach": false,
      },
    ],
    "array-element-newline": [
      0,
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-body-style": [
      2,
      "as-needed",
      {
        "requireReturnForObjectLiteral": false,
      },
    ],
    "arrow-parens": [
      0,
      "always",
    ],
    "arrow-spacing": [
      0,
      {
        "after": true,
        "before": true,
      },
    ],
    "babel/object-curly-spacing": [
      0,
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      0,
    ],
    "block-scoped-var": [
      2,
    ],
    "block-spacing": [
      0,
      "always",
    ],
    "brace-style": [
      0,
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "callback-return": [
      0,
    ],
    "camelcase": [
      2,
      {
        "ignoreDestructuring": false,
        "ignoreGlobals": false,
        "ignoreImports": false,
        "properties": "never",
      },
    ],
    "capitalized-comments": [
      0,
      "never",
      {
        "block": {
          "ignoreConsecutiveComments": true,
          "ignoreInlineComments": true,
          "ignorePattern": ".*",
        },
        "line": {
          "ignoreConsecutiveComments": true,
          "ignoreInlineComments": true,
          "ignorePattern": ".*",
        },
      },
    ],
    "class-methods-use-this": [
      0,
      {
        "exceptMethods": [],
      },
    ],
    "comma-dangle": [
      0,
      {
        "arrays": "always-multiline",
        "exports": "always-multiline",
        "functions": "always-multiline",
        "imports": "always-multiline",
        "objects": "always-multiline",
      },
    ],
    "comma-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      0,
      "last",
      {
        "exceptions": {
          "ArrayExpression": false,
          "ArrayPattern": false,
          "ArrowFunctionExpression": false,
          "CallExpression": false,
          "FunctionDeclaration": false,
          "FunctionExpression": false,
          "ImportDeclaration": false,
          "NewExpression": false,
          "ObjectExpression": false,
          "ObjectPattern": false,
          "VariableDeclaration": false,
        },
      },
    ],
    "complexity": [
      0,
      20,
    ],
    "computed-property-spacing": [
      0,
      "never",
    ],
    "consistent-return": [
      2,
    ],
    "consistent-this": [
      0,
    ],
    "constructor-super": [
      2,
    ],
    "curly": [
      0,
      "multi-line",
    ],
    "default-case": [
      0,
      {
        "commentPattern": "^no default$",
      },
    ],
    "default-case-last": [
      2,
    ],
    "default-param-last": [
      2,
    ],
    "dot-location": [
      0,
      "property",
    ],
    "dot-notation": [
      2,
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eol-last": [
      0,
      "always",
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      0,
    ],
    "flowtype/delimiter-dangle": [
      0,
    ],
    "flowtype/generic-spacing": [
      0,
    ],
    "flowtype/object-type-curly-spacing": [
      0,
    ],
    "flowtype/object-type-delimiter": [
      0,
    ],
    "flowtype/quotes": [
      0,
    ],
    "flowtype/semi": [
      0,
    ],
    "flowtype/space-after-type-colon": [
      0,
    ],
    "flowtype/space-before-generic-bracket": [
      0,
    ],
    "flowtype/space-before-type-colon": [
      0,
    ],
    "flowtype/union-intersection-spacing": [
      0,
    ],
    "for-direction": [
      2,
    ],
    "func-call-spacing": [
      0,
      "never",
    ],
    "func-name-matching": [
      0,
      "always",
      {
        "considerPropertyDescriptor": true,
        "includeCommonJSModuleExports": false,
      },
    ],
    "func-names": [
      1,
    ],
    "func-style": [
      0,
      "expression",
    ],
    "function-call-argument-newline": [
      0,
      "consistent",
    ],
    "function-paren-newline": [
      0,
      "multiline-arguments",
    ],
    "generator-star": [
      0,
    ],
    "generator-star-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "getter-return": [
      2,
      {
        "allowImplicit": true,
      },
    ],
    "global-require": [
      0,
    ],
    "grouped-accessor-pairs": [
      2,
    ],
    "guard-for-in": [
      2,
    ],
    "handle-callback-err": [
      0,
    ],
    "id-denylist": [
      0,
    ],
    "id-length": [
      0,
    ],
    "id-match": [
      0,
    ],
    "implicit-arrow-linebreak": [
      0,
      "beside",
    ],
    "indent": [
      0,
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "outerIIFEBody": 1,
      },
    ],
    "indent-legacy": [
      0,
    ],
    "init-declarations": [
      0,
    ],
    "jest/expect-expect": [
      1,
    ],
    "jest/no-alias-methods": [
      2,
    ],
    "jest/no-commented-out-tests": [
      1,
    ],
    "jest/no-conditional-expect": [
      2,
    ],
    "jest/no-deprecated-functions": [
      0,
    ],
    "jest/no-disabled-tests": [
      1,
    ],
    "jest/no-done-callback": [
      2,
    ],
    "jest/no-export": [
      2,
    ],
    "jest/no-focused-tests": [
      2,
    ],
    "jest/no-identical-title": [
      2,
    ],
    "jest/no-interpolation-in-snapshots": [
      2,
    ],
    "jest/no-jasmine-globals": [
      2,
    ],
    "jest/no-mocks-import": [
      2,
    ],
    "jest/no-standalone-expect": [
      2,
    ],
    "jest/no-test-prefixes": [
      2,
    ],
    "jest/prefer-to-be": [
      2,
    ],
    "jest/prefer-to-contain": [
      2,
    ],
    "jest/prefer-to-have-length": [
      2,
    ],
    "jest/valid-describe-callback": [
      2,
    ],
    "jest/valid-expect": [
      2,
    ],
    "jest/valid-expect-in-promise": [
      2,
    ],
    "jest/valid-title": [
      2,
    ],
    "jsx-quotes": [
      0,
      "prefer-double",
    ],
    "key-spacing": [
      0,
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      0,
      {
        "after": true,
        "before": true,
        "overrides": {
          "case": {
            "after": true,
          },
          "return": {
            "after": true,
          },
          "throw": {
            "after": true,
          },
        },
      },
    ],
    "line-comment-position": [
      0,
      {
        "applyDefaultPatterns": true,
        "ignorePattern": "",
        "position": "above",
      },
    ],
    "linebreak-style": [
      0,
      "unix",
    ],
    "lines-around-comment": [
      0,
    ],
    "lines-around-directive": [
      2,
      {
        "after": "always",
        "before": "always",
      },
    ],
    "lines-between-class-members": [
      2,
      "always",
      {
        "exceptAfterSingleLine": false,
      },
    ],
    "max-classes-per-file": [
      0,
      1,
    ],
    "max-depth": [
      0,
      4,
    ],
    "max-len": [
      0,
      100,
      2,
      {
        "ignoreComments": false,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
    "max-lines": [
      0,
      {
        "max": 300,
        "skipBlankLines": true,
        "skipComments": true,
      },
    ],
    "max-lines-per-function": [
      0,
      {
        "IIFEs": true,
        "max": 50,
        "skipBlankLines": true,
        "skipComments": true,
      },
    ],
    "max-nested-callbacks": [
      0,
    ],
    "max-params": [
      0,
      3,
    ],
    "max-statements": [
      0,
      10,
    ],
    "max-statements-per-line": [
      0,
      {
        "max": 1,
      },
    ],
    "multiline-comment-style": [
      0,
      "starred-block",
    ],
    "multiline-ternary": [
      0,
      "never",
    ],
    "new-cap": [
      2,
      {
        "capIsNew": false,
        "capIsNewExceptions": [
          "Immutable.Map",
          "Immutable.Set",
          "Immutable.List",
        ],
        "newIsCap": true,
        "newIsCapExceptions": [],
        "properties": true,
      },
    ],
    "new-parens": [
      0,
    ],
    "newline-after-var": [
      0,
    ],
    "newline-before-return": [
      0,
    ],
    "newline-per-chained-call": [
      0,
      {
        "ignoreChainWithDepth": 4,
      },
    ],
    "no-alert": [
      1,
    ],
    "no-array-constructor": [
      2,
    ],
    "no-arrow-condition": [
      0,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-await-in-loop": [
      1,
    ],
    "no-bitwise": [
      0,
    ],
    "no-buffer-constructor": [
      2,
    ],
    "no-caller": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-catch-shadow": [
      0,
    ],
    "no-class-assign": [
      2,
    ],
    "no-comma-dangle": [
      0,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "always",
    ],
    "no-confusing-arrow": [
      0,
      {
        "allowParens": true,
      },
    ],
    "no-console": [
      0,
    ],
    "no-const-assign": [
      2,
    ],
    "no-constant-condition": [
      1,
    ],
    "no-constructor-return": [
      2,
    ],
    "no-continue": [
      0,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-div-regex": [
      0,
    ],
    "no-dupe-args": [
      2,
    ],
    "no-dupe-class-members": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-duplicate-imports": [
      0,
    ],
    "no-else-return": [
      2,
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      0,
    ],
    "no-empty-function": [
      0,
      {
        "allow": [
          "arrowFunctions",
          "functions",
          "methods",
        ],
      },
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-empty-static-block": [
      1,
    ],
    "no-eq-null": [
      0,
    ],
    "no-eval": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extend-native": [
      2,
    ],
    "no-extra-bind": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-label": [
      2,
    ],
    "no-extra-parens": [
      0,
      "all",
      {
        "conditionalAssign": true,
        "enforceForArrowConditionals": false,
        "ignoreJSX": "all",
        "nestedBinaryExpressions": false,
        "returnAssign": false,
      },
    ],
    "no-extra-semi": [
      0,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-floating-decimal": [
      0,
    ],
    "no-func-assign": [
      2,
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-implicit-coercion": [
      0,
      {
        "allow": [],
        "boolean": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implicit-globals": [
      0,
    ],
    "no-implied-eval": [
      2,
    ],
    "no-import-assign": [
      2,
    ],
    "no-inline-comments": [
      0,
    ],
    "no-inner-declarations": [
      2,
    ],
    "no-invalid-regexp": [
      0,
    ],
    "no-invalid-this": [
      0,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-iterator": [
      2,
    ],
    "no-label-var": [
      2,
    ],
    "no-labels": [
      2,
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      2,
    ],
    "no-lonely-if": [
      2,
    ],
    "no-loop-func": [
      2,
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-magic-numbers": [
      0,
      {
        "detectObjects": false,
        "enforceConst": true,
        "ignore": [],
        "ignoreArrayIndexes": true,
      },
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-mixed-operators": [
      0,
      {
        "allowSamePrecedence": false,
        "groups": [
          [
            "%",
            "**",
          ],
          [
            "%",
            "+",
          ],
          [
            "%",
            "-",
          ],
          [
            "%",
            "*",
          ],
          [
            "%",
            "/",
          ],
          [
            "/",
            "*",
          ],
          [
            "&",
            "|",
            "<<",
            ">>",
            ">>>",
          ],
          [
            "==",
            "!=",
            "===",
            "!==",
          ],
          [
            "&&",
            "||",
          ],
        ],
      },
    ],
    "no-mixed-requires": [
      0,
      false,
    ],
    "no-mixed-spaces-and-tabs": [
      0,
    ],
    "no-multi-assign": [
      2,
    ],
    "no-multi-spaces": [
      0,
      {
        "ignoreEOLComments": false,
      },
    ],
    "no-multi-str": [
      2,
    ],
    "no-multiple-empty-lines": [
      0,
      {
        "max": 1,
        "maxBOF": 0,
        "maxEOF": 0,
      },
    ],
    "no-native-reassign": [
      0,
    ],
    "no-negated-condition": [
      0,
    ],
    "no-negated-in-lhs": [
      0,
    ],
    "no-nested-ternary": [
      2,
    ],
    "no-new": [
      2,
    ],
    "no-new-func": [
      2,
    ],
    "no-new-object": [
      2,
    ],
    "no-new-require": [
      2,
    ],
    "no-new-symbol": [
      2,
    ],
    "no-new-wrappers": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-octal-escape": [
      2,
    ],
    "no-param-reassign": [
      0,
      {
        "ignorePropertyModificationsFor": [
          "acc",
          "accumulator",
          "e",
          "ctx",
          "context",
          "req",
          "request",
          "res",
          "response",
          "$scope",
          "staticContext",
        ],
        "props": true,
      },
    ],
    "no-path-concat": [
      2,
    ],
    "no-plusplus": [
      0,
    ],
    "no-process-env": [
      0,
    ],
    "no-process-exit": [
      0,
    ],
    "no-promise-executor-return": [
      2,
    ],
    "no-proto": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-reserved-keys": [
      0,
    ],
    "no-restricted-exports": [
      2,
      {
        "restrictedNamedExports": [
          "default",
          "then",
        ],
      },
    ],
    "no-restricted-globals": [
      2,
      {
        "message": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
        "name": "isFinite",
      },
      {
        "message": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
        "name": "isNaN",
      },
      "addEventListener",
      "blur",
      "close",
      "closed",
      "confirm",
      "defaultStatus",
      "defaultstatus",
      "event",
      "external",
      "find",
      "focus",
      "frameElement",
      "frames",
      "history",
      "innerHeight",
      "innerWidth",
      "length",
      "location",
      "locationbar",
      "menubar",
      "moveBy",
      "moveTo",
      "name",
      "onblur",
      "onerror",
      "onfocus",
      "onload",
      "onresize",
      "onunload",
      "open",
      "opener",
      "opera",
      "outerHeight",
      "outerWidth",
      "pageXOffset",
      "pageYOffset",
      "parent",
      "print",
      "removeEventListener",
      "resizeBy",
      "resizeTo",
      "screen",
      "screenLeft",
      "screenTop",
      "screenX",
      "screenY",
      "scroll",
      "scrollbars",
      "scrollBy",
      "scrollTo",
      "scrollX",
      "scrollY",
      "self",
      "status",
      "statusbar",
      "stop",
      "toolbar",
      "top",
    ],
    "no-restricted-imports": [
      0,
      {
        "paths": [],
        "patterns": [],
      },
    ],
    "no-restricted-modules": [
      0,
    ],
    "no-restricted-properties": [
      2,
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-restricted-syntax": [
      0,
      {
        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array.",
        "selector": "ForInStatement",
      },
      {
        "message": "iterators/generators require regenerator-runtime, which is too heavyweight for this guide to allow them. Separately, loops should be avoided in favor of array iterations.",
        "selector": "ForOfStatement",
      },
      {
        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand.",
        "selector": "LabeledStatement",
      },
      {
        "message": "\`with\` is disallowed in strict mode because it makes code impossible to predict and optimize.",
        "selector": "WithStatement",
      },
    ],
    "no-return-assign": [
      2,
      "always",
    ],
    "no-return-await": [
      0,
    ],
    "no-script-url": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      2,
    ],
    "no-sequences": [
      2,
    ],
    "no-setter-return": [
      2,
    ],
    "no-shadow": [
      2,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-space-before-semi": [
      0,
    ],
    "no-spaced-func": [
      0,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-sync": [
      0,
    ],
    "no-tabs": [
      0,
    ],
    "no-template-curly-in-string": [
      2,
    ],
    "no-ternary": [
      0,
    ],
    "no-this-before-super": [
      2,
    ],
    "no-throw-literal": [
      2,
    ],
    "no-trailing-spaces": [
      0,
      {
        "ignoreComments": false,
        "skipBlankLines": false,
      },
    ],
    "no-undef": [
      2,
    ],
    "no-undef-init": [
      2,
    ],
    "no-undefined": [
      0,
    ],
    "no-underscore-dangle": [
      2,
      {
        "allow": [],
        "allowAfterSuper": false,
        "allowAfterThis": false,
        "allowAfterThisConstructor": false,
        "allowFunctionParams": true,
        "allowInArrayDestructuring": true,
        "allowInObjectDestructuring": true,
        "enforceInClassFields": false,
        "enforceInMethodNames": true,
      },
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-unmodified-loop-condition": [
      0,
    ],
    "no-unneeded-ternary": [
      2,
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      2,
    ],
    "no-unreachable-loop": [
      2,
      {
        "ignore": [],
      },
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      0,
    ],
    "no-unused-vars": [
      1,
      {
        "args": "after-used",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "no-use-before-define": [
      2,
      {
        "classes": true,
        "functions": true,
        "variables": true,
      },
    ],
    "no-useless-backreference": [
      0,
    ],
    "no-useless-call": [
      0,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-computed-key": [
      2,
    ],
    "no-useless-concat": [
      2,
    ],
    "no-useless-constructor": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-useless-rename": [
      2,
      {
        "ignoreDestructuring": false,
        "ignoreExport": false,
        "ignoreImport": false,
      },
    ],
    "no-useless-return": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-void": [
      2,
    ],
    "no-warning-comments": [
      0,
      {
        "location": "start",
        "terms": [
          "todo",
          "fixme",
          "xxx",
        ],
      },
    ],
    "no-whitespace-before-property": [
      0,
    ],
    "no-with": [
      2,
    ],
    "no-wrap-func": [
      0,
    ],
    "nonblock-statement-body-position": [
      0,
      "beside",
      {
        "overrides": {},
      },
    ],
    "object-curly-newline": [
      0,
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
      },
    ],
    "object-curly-spacing": [
      0,
      "always",
    ],
    "object-property-newline": [
      0,
      {
        "allowAllPropertiesOnSameLine": true,
      },
    ],
    "object-shorthand": [
      2,
      "always",
      {
        "avoidQuotes": true,
        "ignoreConstructors": false,
      },
    ],
    "one-var": [
      2,
      "never",
    ],
    "one-var-declaration-per-line": [
      0,
      "always",
    ],
    "operator-assignment": [
      2,
      "always",
    ],
    "operator-linebreak": [
      0,
      "before",
      {
        "overrides": {
          "=": "none",
        },
      },
    ],
    "padded-blocks": [
      0,
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
      {
        "allowSingleLineBlocks": true,
      },
    ],
    "padding-line-between-statements": [
      0,
    ],
    "prefer-arrow-callback": [
      2,
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      1,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": true,
      },
    ],
    "prefer-destructuring": [
      2,
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "prefer-exponentiation-operator": [
      2,
    ],
    "prefer-named-capture-group": [
      0,
    ],
    "prefer-numeric-literals": [
      2,
    ],
    "prefer-object-spread": [
      2,
    ],
    "prefer-promise-reject-errors": [
      2,
      {
        "allowEmptyReject": true,
      },
    ],
    "prefer-reflect": [
      0,
    ],
    "prefer-regex-literals": [
      2,
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "prefer-template": [
      2,
    ],
    "quote-props": [
      0,
      "as-needed",
      {
        "keywords": false,
        "numbers": false,
        "unnecessary": true,
      },
    ],
    "quotes": [
      0,
      "single",
      {
        "avoidEscape": true,
      },
    ],
    "radix": [
      2,
    ],
    "react/jsx-child-element-spacing": [
      0,
    ],
    "react/jsx-closing-bracket-location": [
      0,
    ],
    "react/jsx-closing-tag-location": [
      0,
    ],
    "react/jsx-curly-newline": [
      0,
    ],
    "react/jsx-curly-spacing": [
      0,
    ],
    "react/jsx-equals-spacing": [
      0,
    ],
    "react/jsx-first-prop-new-line": [
      0,
    ],
    "react/jsx-indent": [
      0,
    ],
    "react/jsx-indent-props": [
      0,
    ],
    "react/jsx-max-props-per-line": [
      0,
    ],
    "react/jsx-newline": [
      0,
    ],
    "react/jsx-one-expression-per-line": [
      0,
    ],
    "react/jsx-props-no-multi-spaces": [
      0,
    ],
    "react/jsx-space-before-closing": [
      0,
    ],
    "react/jsx-tag-spacing": [
      0,
    ],
    "react/jsx-wrap-multilines": [
      0,
    ],
    "redos/no-vulnerable": [
      2,
    ],
    "regexp/confusing-quantifier": [
      1,
    ],
    "regexp/control-character-escape": [
      2,
    ],
    "regexp/match-any": [
      2,
    ],
    "regexp/negation": [
      2,
    ],
    "regexp/no-contradiction-with-assertion": [
      2,
    ],
    "regexp/no-dupe-characters-character-class": [
      2,
    ],
    "regexp/no-dupe-disjunctions": [
      2,
    ],
    "regexp/no-empty-alternative": [
      1,
    ],
    "regexp/no-empty-capturing-group": [
      2,
    ],
    "regexp/no-empty-character-class": [
      2,
    ],
    "regexp/no-empty-group": [
      2,
    ],
    "regexp/no-empty-lookarounds-assertion": [
      2,
    ],
    "regexp/no-empty-string-literal": [
      2,
    ],
    "regexp/no-escape-backspace": [
      2,
    ],
    "regexp/no-extra-lookaround-assertions": [
      2,
    ],
    "regexp/no-invalid-regexp": [
      2,
    ],
    "regexp/no-invisible-character": [
      2,
    ],
    "regexp/no-lazy-ends": [
      1,
    ],
    "regexp/no-legacy-features": [
      2,
    ],
    "regexp/no-misleading-capturing-group": [
      2,
    ],
    "regexp/no-misleading-unicode-character": [
      2,
    ],
    "regexp/no-missing-g-flag": [
      2,
    ],
    "regexp/no-non-standard-flag": [
      2,
    ],
    "regexp/no-obscure-range": [
      2,
    ],
    "regexp/no-optional-assertion": [
      2,
    ],
    "regexp/no-potentially-useless-backreference": [
      1,
    ],
    "regexp/no-super-linear-backtracking": [
      2,
    ],
    "regexp/no-trivially-nested-assertion": [
      2,
    ],
    "regexp/no-trivially-nested-quantifier": [
      2,
    ],
    "regexp/no-unused-capturing-group": [
      2,
    ],
    "regexp/no-useless-assertions": [
      2,
    ],
    "regexp/no-useless-backreference": [
      2,
    ],
    "regexp/no-useless-character-class": [
      2,
    ],
    "regexp/no-useless-dollar-replacements": [
      2,
    ],
    "regexp/no-useless-escape": [
      2,
    ],
    "regexp/no-useless-flag": [
      1,
    ],
    "regexp/no-useless-lazy": [
      2,
    ],
    "regexp/no-useless-non-capturing-group": [
      2,
    ],
    "regexp/no-useless-quantifier": [
      2,
    ],
    "regexp/no-useless-range": [
      2,
    ],
    "regexp/no-useless-set-operand": [
      2,
    ],
    "regexp/no-useless-string-literal": [
      2,
    ],
    "regexp/no-useless-two-nums-quantifier": [
      2,
    ],
    "regexp/no-zero-quantifier": [
      2,
    ],
    "regexp/optimal-lookaround-quantifier": [
      1,
    ],
    "regexp/optimal-quantifier-concatenation": [
      2,
    ],
    "regexp/prefer-character-class": [
      2,
    ],
    "regexp/prefer-d": [
      2,
    ],
    "regexp/prefer-plus-quantifier": [
      2,
    ],
    "regexp/prefer-predefined-assertion": [
      2,
    ],
    "regexp/prefer-question-quantifier": [
      2,
    ],
    "regexp/prefer-range": [
      2,
    ],
    "regexp/prefer-set-operation": [
      2,
    ],
    "regexp/prefer-star-quantifier": [
      2,
    ],
    "regexp/prefer-unicode-codepoint-escapes": [
      2,
    ],
    "regexp/prefer-w": [
      2,
    ],
    "regexp/simplify-set-operations": [
      2,
    ],
    "regexp/sort-flags": [
      2,
    ],
    "regexp/strict": [
      2,
    ],
    "regexp/use-ignore-case": [
      2,
    ],
    "require-atomic-updates": [
      0,
    ],
    "require-await": [
      0,
    ],
    "require-jsdoc": [
      0,
    ],
    "require-unicode-regexp": [
      0,
    ],
    "require-yield": [
      2,
    ],
    "rest-spread-spacing": [
      0,
      "never",
    ],
    "semi": [
      0,
      "always",
    ],
    "semi-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "semi-style": [
      0,
      "last",
    ],
    "simple-import-sort/exports": [
      1,
    ],
    "simple-import-sort/imports": [
      1,
    ],
    "sort-imports": [
      0,
      {
        "ignoreCase": false,
        "ignoreDeclarationSort": false,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
    "sort-keys": [
      0,
      "asc",
      {
        "caseSensitive": false,
        "natural": true,
      },
    ],
    "sort-vars": [
      0,
    ],
    "space-after-function-name": [
      0,
    ],
    "space-after-keywords": [
      0,
    ],
    "space-before-blocks": [
      0,
    ],
    "space-before-function-paren": [
      0,
      {
        "anonymous": "always",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "space-before-function-parentheses": [
      0,
    ],
    "space-before-keywords": [
      0,
    ],
    "space-in-brackets": [
      0,
    ],
    "space-in-parens": [
      0,
      "never",
    ],
    "space-infix-ops": [
      0,
    ],
    "space-return-throw-case": [
      0,
    ],
    "space-unary-ops": [
      0,
      {
        "nonwords": false,
        "overrides": {},
        "words": true,
      },
    ],
    "space-unary-word-ops": [
      0,
    ],
    "spaced-comment": [
      2,
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            ":",
            "::",
          ],
        },
        "line": {
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            "/",
          ],
        },
      },
    ],
    "standard/array-bracket-even-spacing": [
      0,
    ],
    "standard/computed-property-even-spacing": [
      0,
    ],
    "standard/object-curly-even-spacing": [
      0,
    ],
    "strict": [
      2,
      "never",
    ],
    "switch-colon-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "symbol-description": [
      2,
    ],
    "template-curly-spacing": [
      0,
    ],
    "template-tag-spacing": [
      0,
      "never",
    ],
    "unicode-bom": [
      2,
      "never",
    ],
    "unicorn/empty-brace-spaces": [
      0,
    ],
    "unicorn/escape-case": [
      2,
    ],
    "unicorn/no-hex-escape": [
      2,
    ],
    "unicorn/no-instanceof-array": [
      2,
    ],
    "unicorn/no-invalid-remove-event-listener": [
      2,
    ],
    "unicorn/no-nested-ternary": [
      0,
    ],
    "unicorn/no-new-buffer": [
      2,
    ],
    "unicorn/no-static-only-class": [
      2,
    ],
    "unicorn/no-typeof-undefined": [
      2,
    ],
    "unicorn/no-useless-spread": [
      2,
    ],
    "unicorn/number-literal-case": [
      2,
    ],
    "unicorn/numeric-separators-style": [
      2,
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-array-find": [
      2,
    ],
    "unicorn/prefer-array-index-of": [
      2,
    ],
    "unicorn/prefer-array-some": [
      2,
    ],
    "unicorn/prefer-blob-reading-methods": [
      2,
    ],
    "unicorn/prefer-date-now": [
      2,
    ],
    "unicorn/prefer-default-parameters": [
      2,
    ],
    "unicorn/prefer-includes": [
      2,
    ],
    "unicorn/prefer-logical-operator-over-ternary": [
      2,
    ],
    "unicorn/prefer-native-coercion-functions": [
      2,
    ],
    "unicorn/prefer-node-protocol": [
      2,
    ],
    "unicorn/prefer-number-properties": [
      2,
    ],
    "unicorn/prefer-optional-catch-binding": [
      2,
    ],
    "unicorn/prefer-regexp-test": [
      2,
    ],
    "unicorn/prefer-string-starts-ends-with": [
      2,
    ],
    "unicorn/prefer-string-trim-start-end": [
      2,
    ],
    "unicorn/prefer-type-error": [
      2,
    ],
    "unicorn/template-indent": [
      0,
    ],
    "use-isnan": [
      2,
    ],
    "valid-jsdoc": [
      0,
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": true,
      },
    ],
    "vars-on-top": [
      2,
    ],
    "vue/array-bracket-newline": [
      0,
    ],
    "vue/array-bracket-spacing": [
      0,
    ],
    "vue/array-element-newline": [
      0,
    ],
    "vue/arrow-spacing": [
      0,
    ],
    "vue/block-spacing": [
      0,
    ],
    "vue/block-tag-newline": [
      0,
    ],
    "vue/brace-style": [
      0,
    ],
    "vue/comma-dangle": [
      0,
    ],
    "vue/comma-spacing": [
      0,
    ],
    "vue/comma-style": [
      0,
    ],
    "vue/dot-location": [
      0,
    ],
    "vue/func-call-spacing": [
      0,
    ],
    "vue/html-closing-bracket-newline": [
      0,
    ],
    "vue/html-closing-bracket-spacing": [
      0,
    ],
    "vue/html-end-tags": [
      0,
    ],
    "vue/html-indent": [
      0,
    ],
    "vue/html-quotes": [
      0,
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      0,
    ],
    "vue/keyword-spacing": [
      0,
    ],
    "vue/max-attributes-per-line": [
      0,
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      0,
    ],
    "vue/multiline-ternary": [
      0,
    ],
    "vue/mustache-interpolation-spacing": [
      0,
    ],
    "vue/no-extra-parens": [
      0,
    ],
    "vue/no-multi-spaces": [
      0,
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      0,
    ],
    "vue/object-curly-newline": [
      0,
    ],
    "vue/object-curly-spacing": [
      0,
    ],
    "vue/object-property-newline": [
      0,
    ],
    "vue/operator-linebreak": [
      0,
    ],
    "vue/quote-props": [
      0,
    ],
    "vue/script-indent": [
      0,
    ],
    "vue/singleline-html-element-content-newline": [
      0,
    ],
    "vue/space-in-parens": [
      0,
    ],
    "vue/space-infix-ops": [
      0,
    ],
    "vue/space-unary-ops": [
      0,
    ],
    "vue/template-curly-spacing": [
      0,
    ],
    "wrap-iife": [
      0,
      "outside",
      {
        "functionPrototypeMethods": false,
      },
    ],
    "wrap-regex": [
      0,
    ],
    "yield-star-spacing": [
      0,
      "after",
    ],
    "yoda": [
      2,
    ],
  },
}
`;

exports[`ESLint calculated config Snapshot > .ts 1`] = `
{
  "languageOptions": {
    "ecmaVersion": "latest",
    "parser": "typescript-eslint/parser",
    "parserOptions": {
      "project": "./tsconfig.json",
    },
    "sourceType": "module",
  },
  "plugins": [
    "@",
    "simple-import-sort",
    "redos",
    "unicorn:eslint-plugin-unicorn",
    "regexp:eslint-plugin-regexp",
    "jest:eslint-plugin-jest",
    "@typescript-eslint",
  ],
  "rules": {
    "@babel/object-curly-spacing": [
      0,
    ],
    "@babel/semi": [
      0,
    ],
    "@typescript-eslint/adjacent-overload-signatures": [
      2,
    ],
    "@typescript-eslint/array-type": [
      2,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/ban-tslint-comment": [
      2,
    ],
    "@typescript-eslint/ban-types": [
      2,
    ],
    "@typescript-eslint/block-spacing": [
      0,
    ],
    "@typescript-eslint/brace-style": [
      0,
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "@typescript-eslint/class-literal-property-style": [
      2,
    ],
    "@typescript-eslint/comma-dangle": [
      0,
      {
        "arrays": "always-multiline",
        "enums": "always-multiline",
        "exports": "always-multiline",
        "functions": "always-multiline",
        "generics": "always-multiline",
        "imports": "always-multiline",
        "objects": "always-multiline",
        "tuples": "always-multiline",
      },
    ],
    "@typescript-eslint/comma-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      2,
    ],
    "@typescript-eslint/consistent-indexed-object-style": [
      2,
    ],
    "@typescript-eslint/consistent-type-assertions": [
      2,
    ],
    "@typescript-eslint/consistent-type-definitions": [
      2,
    ],
    "@typescript-eslint/consistent-type-imports": [
      1,
    ],
    "@typescript-eslint/default-param-last": [
      2,
    ],
    "@typescript-eslint/dot-notation": [
      2,
      {
        "allowIndexSignaturePropertyAccess": false,
        "allowKeywords": true,
        "allowPattern": "",
        "allowPrivateClassPropertyAccess": false,
        "allowProtectedClassPropertyAccess": false,
      },
    ],
    "@typescript-eslint/explicit-function-return-type": [
      0,
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      1,
    ],
    "@typescript-eslint/func-call-spacing": [
      0,
      "never",
    ],
    "@typescript-eslint/indent": [
      0,
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "outerIIFEBody": 1,
      },
    ],
    "@typescript-eslint/key-spacing": [
      0,
    ],
    "@typescript-eslint/keyword-spacing": [
      0,
      {
        "after": true,
        "before": true,
        "overrides": {
          "case": {
            "after": true,
          },
          "return": {
            "after": true,
          },
          "throw": {
            "after": true,
          },
        },
      },
    ],
    "@typescript-eslint/lines-around-comment": [
      0,
    ],
    "@typescript-eslint/lines-between-class-members": [
      2,
      "always",
      {
        "exceptAfterOverload": true,
        "exceptAfterSingleLine": false,
      },
    ],
    "@typescript-eslint/member-delimiter-style": [
      0,
    ],
    "@typescript-eslint/naming-convention": [
      2,
      {
        "format": [
          "camelCase",
          "PascalCase",
          "UPPER_CASE",
        ],
        "selector": "variable",
      },
      {
        "format": [
          "camelCase",
          "PascalCase",
        ],
        "selector": "function",
      },
      {
        "format": [
          "PascalCase",
        ],
        "selector": "typeLike",
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-confusing-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-confusing-void-expression": [
      2,
    ],
    "@typescript-eslint/no-dupe-class-members": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-dynamic-delete": [
      2,
    ],
    "@typescript-eslint/no-empty-function": [
      0,
      {
        "allow": [
          "arrowFunctions",
          "functions",
          "methods",
        ],
      },
    ],
    "@typescript-eslint/no-empty-interface": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extra-parens": [
      0,
      "all",
      {
        "conditionalAssign": true,
        "enforceForArrowConditionals": false,
        "ignoreJSX": "all",
        "nestedBinaryExpressions": false,
        "returnAssign": false,
      },
    ],
    "@typescript-eslint/no-extra-semi": [
      0,
    ],
    "@typescript-eslint/no-extraneous-class": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
      {
        "ignoreIIFE": true,
      },
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-inferrable-types": [
      2,
    ],
    "@typescript-eslint/no-invalid-void-type": [
      2,
    ],
    "@typescript-eslint/no-loop-func": [
      2,
    ],
    "@typescript-eslint/no-loss-of-precision": [
      2,
    ],
    "@typescript-eslint/no-magic-numbers": [
      0,
      {
        "detectObjects": false,
        "enforceConst": true,
        "ignore": [],
        "ignoreArrayIndexes": true,
      },
    ],
    "@typescript-eslint/no-meaningless-void-operator": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-mixed-enums": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-redeclare": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      1,
    ],
    "@typescript-eslint/no-shadow": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-throw-literal": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-condition": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-arguments": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
      {
        "args": "after-used",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "@typescript-eslint/no-use-before-define": [
      0,
      {
        "classes": true,
        "functions": true,
        "variables": true,
      },
    ],
    "@typescript-eslint/no-useless-constructor": [
      2,
    ],
    "@typescript-eslint/no-useless-empty-export": [
      1,
    ],
    "@typescript-eslint/no-useless-template-literals": [
      2,
    ],
    "@typescript-eslint/no-var-requires": [
      2,
    ],
    "@typescript-eslint/non-nullable-type-assertion-style": [
      2,
    ],
    "@typescript-eslint/object-curly-spacing": [
      0,
      "always",
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-for-of": [
      2,
    ],
    "@typescript-eslint/prefer-function-type": [
      2,
    ],
    "@typescript-eslint/prefer-includes": [
      2,
    ],
    "@typescript-eslint/prefer-literal-enum-member": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/prefer-optional-chain": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/prefer-readonly": [
      1,
    ],
    "@typescript-eslint/prefer-reduce-type-parameter": [
      2,
    ],
    "@typescript-eslint/prefer-return-this-type": [
      2,
    ],
    "@typescript-eslint/prefer-string-starts-ends-with": [
      2,
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      2,
    ],
    "@typescript-eslint/quotes": [
      0,
      "single",
      {
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/return-await": [
      1,
      "always",
    ],
    "@typescript-eslint/semi": [
      0,
      "always",
    ],
    "@typescript-eslint/space-before-blocks": [
      0,
    ],
    "@typescript-eslint/space-before-function-paren": [
      0,
      {
        "anonymous": "always",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": [
      0,
    ],
    "@typescript-eslint/strict-boolean-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/type-annotation-spacing": [
      0,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "@typescript-eslint/unified-signatures": [
      2,
    ],
    "accessor-pairs": [
      0,
    ],
    "array-bracket-newline": [
      0,
      "consistent",
    ],
    "array-bracket-spacing": [
      0,
      "never",
    ],
    "array-callback-return": [
      2,
      {
        "allowImplicit": true,
        "allowVoid": false,
        "checkForEach": false,
      },
    ],
    "array-element-newline": [
      0,
      {
        "minItems": 3,
        "multiline": true,
      },
    ],
    "arrow-body-style": [
      2,
      "as-needed",
      {
        "requireReturnForObjectLiteral": false,
      },
    ],
    "arrow-parens": [
      0,
      "always",
    ],
    "arrow-spacing": [
      0,
      {
        "after": true,
        "before": true,
      },
    ],
    "babel/object-curly-spacing": [
      0,
    ],
    "babel/quotes": [
      0,
    ],
    "babel/semi": [
      0,
    ],
    "block-scoped-var": [
      2,
    ],
    "block-spacing": [
      0,
      "always",
    ],
    "brace-style": [
      0,
      "1tbs",
      {
        "allowSingleLine": true,
      },
    ],
    "callback-return": [
      0,
    ],
    "camelcase": [
      0,
      {
        "ignoreDestructuring": false,
        "properties": "never",
      },
    ],
    "capitalized-comments": [
      0,
      "never",
      {
        "block": {
          "ignoreConsecutiveComments": true,
          "ignoreInlineComments": true,
          "ignorePattern": ".*",
        },
        "line": {
          "ignoreConsecutiveComments": true,
          "ignoreInlineComments": true,
          "ignorePattern": ".*",
        },
      },
    ],
    "class-methods-use-this": [
      0,
      {
        "exceptMethods": [],
      },
    ],
    "comma-dangle": [
      0,
      {
        "arrays": "always-multiline",
        "exports": "always-multiline",
        "functions": "always-multiline",
        "imports": "always-multiline",
        "objects": "always-multiline",
      },
    ],
    "comma-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "comma-style": [
      0,
      "last",
      {
        "exceptions": {
          "ArrayExpression": false,
          "ArrayPattern": false,
          "ArrowFunctionExpression": false,
          "CallExpression": false,
          "FunctionDeclaration": false,
          "FunctionExpression": false,
          "ImportDeclaration": false,
          "NewExpression": false,
          "ObjectExpression": false,
          "ObjectPattern": false,
          "VariableDeclaration": false,
        },
      },
    ],
    "complexity": [
      0,
      20,
    ],
    "computed-property-spacing": [
      0,
      "never",
    ],
    "consistent-return": [
      2,
    ],
    "consistent-this": [
      0,
    ],
    "constructor-super": [
      0,
    ],
    "curly": [
      0,
      "multi-line",
    ],
    "default-case": [
      0,
      {
        "commentPattern": "^no default$",
      },
    ],
    "default-case-last": [
      2,
    ],
    "default-param-last": [
      0,
    ],
    "dot-location": [
      0,
      "property",
    ],
    "dot-notation": [
      0,
      {
        "allowKeywords": true,
      },
    ],
    "eol-last": [
      0,
      "always",
    ],
    "eqeqeq": [
      2,
      "always",
      {
        "null": "ignore",
      },
    ],
    "flowtype/boolean-style": [
      0,
    ],
    "flowtype/delimiter-dangle": [
      0,
    ],
    "flowtype/generic-spacing": [
      0,
    ],
    "flowtype/object-type-curly-spacing": [
      0,
    ],
    "flowtype/object-type-delimiter": [
      0,
    ],
    "flowtype/quotes": [
      0,
    ],
    "flowtype/semi": [
      0,
    ],
    "flowtype/space-after-type-colon": [
      0,
    ],
    "flowtype/space-before-generic-bracket": [
      0,
    ],
    "flowtype/space-before-type-colon": [
      0,
    ],
    "flowtype/union-intersection-spacing": [
      0,
    ],
    "for-direction": [
      2,
    ],
    "func-call-spacing": [
      0,
      "never",
    ],
    "func-name-matching": [
      0,
      "always",
      {
        "considerPropertyDescriptor": true,
        "includeCommonJSModuleExports": false,
      },
    ],
    "func-names": [
      1,
    ],
    "func-style": [
      0,
      "expression",
    ],
    "function-call-argument-newline": [
      0,
      "consistent",
    ],
    "function-paren-newline": [
      0,
      "multiline-arguments",
    ],
    "generator-star": [
      0,
    ],
    "generator-star-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "getter-return": [
      0,
      {
        "allowImplicit": true,
      },
    ],
    "global-require": [
      0,
    ],
    "grouped-accessor-pairs": [
      2,
    ],
    "guard-for-in": [
      2,
    ],
    "handle-callback-err": [
      0,
    ],
    "id-denylist": [
      0,
    ],
    "id-length": [
      0,
    ],
    "id-match": [
      0,
    ],
    "implicit-arrow-linebreak": [
      0,
      "beside",
    ],
    "indent": [
      0,
      2,
      {
        "ArrayExpression": 1,
        "CallExpression": {
          "arguments": 1,
        },
        "FunctionDeclaration": {
          "body": 1,
          "parameters": 1,
        },
        "FunctionExpression": {
          "body": 1,
          "parameters": 1,
        },
        "ImportDeclaration": 1,
        "ObjectExpression": 1,
        "SwitchCase": 1,
        "VariableDeclarator": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "ignoredNodes": [
          "JSXElement",
          "JSXElement > *",
          "JSXAttribute",
          "JSXIdentifier",
          "JSXNamespacedName",
          "JSXMemberExpression",
          "JSXSpreadAttribute",
          "JSXExpressionContainer",
          "JSXOpeningElement",
          "JSXClosingElement",
          "JSXFragment",
          "JSXOpeningFragment",
          "JSXClosingFragment",
          "JSXText",
          "JSXEmptyExpression",
          "JSXSpreadChild",
        ],
        "outerIIFEBody": 1,
      },
    ],
    "indent-legacy": [
      0,
    ],
    "init-declarations": [
      0,
    ],
    "jest/expect-expect": [
      1,
    ],
    "jest/no-alias-methods": [
      2,
    ],
    "jest/no-commented-out-tests": [
      1,
    ],
    "jest/no-conditional-expect": [
      2,
    ],
    "jest/no-deprecated-functions": [
      0,
    ],
    "jest/no-disabled-tests": [
      1,
    ],
    "jest/no-done-callback": [
      2,
    ],
    "jest/no-export": [
      2,
    ],
    "jest/no-focused-tests": [
      2,
    ],
    "jest/no-identical-title": [
      2,
    ],
    "jest/no-interpolation-in-snapshots": [
      2,
    ],
    "jest/no-jasmine-globals": [
      2,
    ],
    "jest/no-mocks-import": [
      2,
    ],
    "jest/no-standalone-expect": [
      2,
    ],
    "jest/no-test-prefixes": [
      2,
    ],
    "jest/prefer-to-be": [
      2,
    ],
    "jest/prefer-to-contain": [
      2,
    ],
    "jest/prefer-to-have-length": [
      2,
    ],
    "jest/valid-describe-callback": [
      2,
    ],
    "jest/valid-expect": [
      2,
    ],
    "jest/valid-expect-in-promise": [
      2,
    ],
    "jest/valid-title": [
      2,
    ],
    "jsx-quotes": [
      0,
      "prefer-double",
    ],
    "key-spacing": [
      0,
      {
        "afterColon": true,
        "beforeColon": false,
      },
    ],
    "keyword-spacing": [
      0,
      {
        "after": true,
        "before": true,
        "overrides": {
          "case": {
            "after": true,
          },
          "return": {
            "after": true,
          },
          "throw": {
            "after": true,
          },
        },
      },
    ],
    "line-comment-position": [
      0,
      {
        "applyDefaultPatterns": true,
        "ignorePattern": "",
        "position": "above",
      },
    ],
    "linebreak-style": [
      0,
      "unix",
    ],
    "lines-around-comment": [
      0,
    ],
    "lines-around-directive": [
      2,
      {
        "after": "always",
        "before": "always",
      },
    ],
    "lines-between-class-members": [
      0,
      "always",
      {
        "exceptAfterSingleLine": false,
      },
    ],
    "max-classes-per-file": [
      0,
      1,
    ],
    "max-depth": [
      0,
      4,
    ],
    "max-len": [
      0,
      100,
      2,
      {
        "ignoreComments": false,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
    "max-lines": [
      0,
      {
        "max": 300,
        "skipBlankLines": true,
        "skipComments": true,
      },
    ],
    "max-lines-per-function": [
      0,
      {
        "IIFEs": true,
        "max": 50,
        "skipBlankLines": true,
        "skipComments": true,
      },
    ],
    "max-nested-callbacks": [
      0,
    ],
    "max-params": [
      0,
      3,
    ],
    "max-statements": [
      0,
      10,
    ],
    "max-statements-per-line": [
      0,
      {
        "max": 1,
      },
    ],
    "multiline-comment-style": [
      0,
      "starred-block",
    ],
    "multiline-ternary": [
      0,
      "never",
    ],
    "new-cap": [
      2,
      {
        "capIsNew": false,
        "capIsNewExceptions": [
          "Immutable.Map",
          "Immutable.Set",
          "Immutable.List",
        ],
        "newIsCap": true,
        "newIsCapExceptions": [],
        "properties": true,
      },
    ],
    "new-parens": [
      0,
    ],
    "newline-after-var": [
      0,
    ],
    "newline-before-return": [
      0,
    ],
    "newline-per-chained-call": [
      0,
      {
        "ignoreChainWithDepth": 4,
      },
    ],
    "no-alert": [
      1,
    ],
    "no-array-constructor": [
      0,
    ],
    "no-arrow-condition": [
      0,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-await-in-loop": [
      1,
    ],
    "no-bitwise": [
      0,
    ],
    "no-buffer-constructor": [
      2,
    ],
    "no-caller": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-catch-shadow": [
      0,
    ],
    "no-class-assign": [
      2,
    ],
    "no-comma-dangle": [
      0,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "always",
    ],
    "no-confusing-arrow": [
      0,
      {
        "allowParens": true,
      },
    ],
    "no-console": [
      0,
    ],
    "no-const-assign": [
      0,
    ],
    "no-constant-condition": [
      1,
    ],
    "no-constructor-return": [
      2,
    ],
    "no-continue": [
      0,
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-div-regex": [
      0,
    ],
    "no-dupe-args": [
      0,
    ],
    "no-dupe-class-members": [
      0,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-dupe-keys": [
      0,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-duplicate-imports": [
      0,
    ],
    "no-else-return": [
      2,
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      0,
    ],
    "no-empty-function": [
      0,
      {
        "allow": [
          "arrowFunctions",
          "functions",
          "methods",
        ],
      },
    ],
    "no-empty-pattern": [
      2,
    ],
    "no-empty-static-block": [
      1,
    ],
    "no-eq-null": [
      0,
    ],
    "no-eval": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extend-native": [
      2,
    ],
    "no-extra-bind": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
    ],
    "no-extra-label": [
      2,
    ],
    "no-extra-parens": [
      0,
      "all",
      {
        "conditionalAssign": true,
        "enforceForArrowConditionals": false,
        "ignoreJSX": "all",
        "nestedBinaryExpressions": false,
        "returnAssign": false,
      },
    ],
    "no-extra-semi": [
      0,
    ],
    "no-fallthrough": [
      2,
    ],
    "no-floating-decimal": [
      0,
    ],
    "no-func-assign": [
      0,
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-implicit-coercion": [
      0,
      {
        "allow": [],
        "boolean": false,
        "number": true,
        "string": true,
      },
    ],
    "no-implicit-globals": [
      0,
    ],
    "no-implied-eval": [
      0,
    ],
    "no-import-assign": [
      0,
    ],
    "no-inline-comments": [
      0,
    ],
    "no-inner-declarations": [
      2,
    ],
    "no-invalid-regexp": [
      0,
    ],
    "no-invalid-this": [
      0,
    ],
    "no-irregular-whitespace": [
      2,
    ],
    "no-iterator": [
      2,
    ],
    "no-label-var": [
      2,
    ],
    "no-labels": [
      2,
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      2,
    ],
    "no-lonely-if": [
      2,
    ],
    "no-loop-func": [
      0,
    ],
    "no-loss-of-precision": [
      0,
    ],
    "no-magic-numbers": [
      0,
      {
        "detectObjects": false,
        "enforceConst": true,
        "ignore": [],
        "ignoreArrayIndexes": true,
      },
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-mixed-operators": [
      0,
      {
        "allowSamePrecedence": false,
        "groups": [
          [
            "%",
            "**",
          ],
          [
            "%",
            "+",
          ],
          [
            "%",
            "-",
          ],
          [
            "%",
            "*",
          ],
          [
            "%",
            "/",
          ],
          [
            "/",
            "*",
          ],
          [
            "&",
            "|",
            "<<",
            ">>",
            ">>>",
          ],
          [
            "==",
            "!=",
            "===",
            "!==",
          ],
          [
            "&&",
            "||",
          ],
        ],
      },
    ],
    "no-mixed-requires": [
      0,
      false,
    ],
    "no-mixed-spaces-and-tabs": [
      0,
    ],
    "no-multi-assign": [
      2,
    ],
    "no-multi-spaces": [
      0,
      {
        "ignoreEOLComments": false,
      },
    ],
    "no-multi-str": [
      2,
    ],
    "no-multiple-empty-lines": [
      0,
      {
        "max": 1,
        "maxBOF": 0,
        "maxEOF": 0,
      },
    ],
    "no-native-reassign": [
      0,
    ],
    "no-negated-condition": [
      0,
    ],
    "no-negated-in-lhs": [
      0,
    ],
    "no-nested-ternary": [
      2,
    ],
    "no-new": [
      2,
    ],
    "no-new-func": [
      0,
    ],
    "no-new-object": [
      2,
    ],
    "no-new-require": [
      2,
    ],
    "no-new-symbol": [
      0,
    ],
    "no-new-wrappers": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-obj-calls": [
      0,
    ],
    "no-octal": [
      2,
    ],
    "no-octal-escape": [
      2,
    ],
    "no-param-reassign": [
      0,
      {
        "ignorePropertyModificationsFor": [
          "acc",
          "accumulator",
          "e",
          "ctx",
          "context",
          "req",
          "request",
          "res",
          "response",
          "$scope",
          "staticContext",
        ],
        "props": true,
      },
    ],
    "no-path-concat": [
      2,
    ],
    "no-plusplus": [
      0,
    ],
    "no-process-env": [
      0,
    ],
    "no-process-exit": [
      0,
    ],
    "no-promise-executor-return": [
      2,
    ],
    "no-proto": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-redeclare": [
      0,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-reserved-keys": [
      0,
    ],
    "no-restricted-exports": [
      2,
      {
        "restrictedNamedExports": [
          "default",
          "then",
        ],
      },
    ],
    "no-restricted-globals": [
      2,
      {
        "message": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
        "name": "isFinite",
      },
      {
        "message": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
        "name": "isNaN",
      },
      "addEventListener",
      "blur",
      "close",
      "closed",
      "confirm",
      "defaultStatus",
      "defaultstatus",
      "event",
      "external",
      "find",
      "focus",
      "frameElement",
      "frames",
      "history",
      "innerHeight",
      "innerWidth",
      "length",
      "location",
      "locationbar",
      "menubar",
      "moveBy",
      "moveTo",
      "name",
      "onblur",
      "onerror",
      "onfocus",
      "onload",
      "onresize",
      "onunload",
      "open",
      "opener",
      "opera",
      "outerHeight",
      "outerWidth",
      "pageXOffset",
      "pageYOffset",
      "parent",
      "print",
      "removeEventListener",
      "resizeBy",
      "resizeTo",
      "screen",
      "screenLeft",
      "screenTop",
      "screenX",
      "screenY",
      "scroll",
      "scrollbars",
      "scrollBy",
      "scrollTo",
      "scrollX",
      "scrollY",
      "self",
      "status",
      "statusbar",
      "stop",
      "toolbar",
      "top",
    ],
    "no-restricted-imports": [
      0,
      {
        "paths": [],
        "patterns": [],
      },
    ],
    "no-restricted-modules": [
      0,
    ],
    "no-restricted-properties": [
      2,
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-restricted-syntax": [
      0,
      {
        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array.",
        "selector": "ForInStatement",
      },
      {
        "message": "iterators/generators require regenerator-runtime, which is too heavyweight for this guide to allow them. Separately, loops should be avoided in favor of array iterations.",
        "selector": "ForOfStatement",
      },
      {
        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand.",
        "selector": "LabeledStatement",
      },
      {
        "message": "\`with\` is disallowed in strict mode because it makes code impossible to predict and optimize.",
        "selector": "WithStatement",
      },
    ],
    "no-return-assign": [
      2,
      "always",
    ],
    "no-return-await": [
      0,
    ],
    "no-script-url": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      2,
    ],
    "no-sequences": [
      2,
    ],
    "no-setter-return": [
      0,
    ],
    "no-shadow": [
      0,
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-space-before-semi": [
      0,
    ],
    "no-spaced-func": [
      0,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-sync": [
      0,
    ],
    "no-tabs": [
      0,
    ],
    "no-template-curly-in-string": [
      2,
    ],
    "no-ternary": [
      0,
    ],
    "no-this-before-super": [
      0,
    ],
    "no-throw-literal": [
      0,
    ],
    "no-trailing-spaces": [
      0,
      {
        "ignoreComments": false,
        "skipBlankLines": false,
      },
    ],
    "no-undef": [
      0,
    ],
    "no-undef-init": [
      2,
    ],
    "no-undefined": [
      0,
    ],
    "no-underscore-dangle": [
      2,
      {
        "allow": [],
        "allowAfterSuper": false,
        "allowAfterThis": false,
        "allowAfterThisConstructor": false,
        "allowFunctionParams": true,
        "allowInArrayDestructuring": true,
        "allowInObjectDestructuring": true,
        "enforceInClassFields": false,
        "enforceInMethodNames": true,
      },
    ],
    "no-unexpected-multiline": [
      0,
    ],
    "no-unmodified-loop-condition": [
      0,
    ],
    "no-unneeded-ternary": [
      2,
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      0,
    ],
    "no-unreachable-loop": [
      2,
      {
        "ignore": [],
      },
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-negation": [
      0,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "no-unused-expressions": [
      0,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      0,
    ],
    "no-unused-vars": [
      0,
      {
        "args": "after-used",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "no-use-before-define": [
      0,
      {
        "classes": true,
        "functions": true,
        "variables": true,
      },
    ],
    "no-useless-backreference": [
      0,
    ],
    "no-useless-call": [
      0,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-computed-key": [
      2,
    ],
    "no-useless-concat": [
      2,
    ],
    "no-useless-constructor": [
      0,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-useless-rename": [
      2,
      {
        "ignoreDestructuring": false,
        "ignoreExport": false,
        "ignoreImport": false,
      },
    ],
    "no-useless-return": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-void": [
      2,
    ],
    "no-warning-comments": [
      0,
      {
        "location": "start",
        "terms": [
          "todo",
          "fixme",
          "xxx",
        ],
      },
    ],
    "no-whitespace-before-property": [
      0,
    ],
    "no-with": [
      2,
    ],
    "no-wrap-func": [
      0,
    ],
    "nonblock-statement-body-position": [
      0,
      "beside",
      {
        "overrides": {},
      },
    ],
    "object-curly-newline": [
      0,
      {
        "ExportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ImportDeclaration": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ObjectExpression": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
        "ObjectPattern": {
          "consistent": true,
          "minProperties": 4,
          "multiline": true,
        },
      },
    ],
    "object-curly-spacing": [
      0,
      "always",
    ],
    "object-property-newline": [
      0,
      {
        "allowAllPropertiesOnSameLine": true,
      },
    ],
    "object-shorthand": [
      2,
      "always",
      {
        "avoidQuotes": true,
        "ignoreConstructors": false,
      },
    ],
    "one-var": [
      2,
      "never",
    ],
    "one-var-declaration-per-line": [
      0,
      "always",
    ],
    "operator-assignment": [
      2,
      "always",
    ],
    "operator-linebreak": [
      0,
      "before",
      {
        "overrides": {
          "=": "none",
        },
      },
    ],
    "padded-blocks": [
      0,
      {
        "blocks": "never",
        "classes": "never",
        "switches": "never",
      },
      {
        "allowSingleLineBlocks": true,
      },
    ],
    "padding-line-between-statements": [
      0,
    ],
    "prefer-arrow-callback": [
      2,
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      1,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": true,
      },
    ],
    "prefer-destructuring": [
      2,
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "prefer-exponentiation-operator": [
      2,
    ],
    "prefer-named-capture-group": [
      0,
    ],
    "prefer-numeric-literals": [
      2,
    ],
    "prefer-object-spread": [
      2,
    ],
    "prefer-promise-reject-errors": [
      0,
      {
        "allowEmptyReject": true,
      },
    ],
    "prefer-reflect": [
      0,
    ],
    "prefer-regex-literals": [
      2,
      {
        "disallowRedundantWrapping": true,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "prefer-template": [
      2,
    ],
    "quote-props": [
      0,
      "as-needed",
      {
        "keywords": false,
        "numbers": false,
        "unnecessary": true,
      },
    ],
    "quotes": [
      0,
      "single",
      {
        "avoidEscape": true,
      },
    ],
    "radix": [
      2,
    ],
    "react/jsx-child-element-spacing": [
      0,
    ],
    "react/jsx-closing-bracket-location": [
      0,
    ],
    "react/jsx-closing-tag-location": [
      0,
    ],
    "react/jsx-curly-newline": [
      0,
    ],
    "react/jsx-curly-spacing": [
      0,
    ],
    "react/jsx-equals-spacing": [
      0,
    ],
    "react/jsx-first-prop-new-line": [
      0,
    ],
    "react/jsx-indent": [
      0,
    ],
    "react/jsx-indent-props": [
      0,
    ],
    "react/jsx-max-props-per-line": [
      0,
    ],
    "react/jsx-newline": [
      0,
    ],
    "react/jsx-one-expression-per-line": [
      0,
    ],
    "react/jsx-props-no-multi-spaces": [
      0,
    ],
    "react/jsx-space-before-closing": [
      0,
    ],
    "react/jsx-tag-spacing": [
      0,
    ],
    "react/jsx-wrap-multilines": [
      0,
    ],
    "redos/no-vulnerable": [
      2,
    ],
    "regexp/confusing-quantifier": [
      1,
    ],
    "regexp/control-character-escape": [
      2,
    ],
    "regexp/match-any": [
      2,
    ],
    "regexp/negation": [
      2,
    ],
    "regexp/no-contradiction-with-assertion": [
      2,
    ],
    "regexp/no-dupe-characters-character-class": [
      2,
    ],
    "regexp/no-dupe-disjunctions": [
      2,
    ],
    "regexp/no-empty-alternative": [
      1,
    ],
    "regexp/no-empty-capturing-group": [
      2,
    ],
    "regexp/no-empty-character-class": [
      2,
    ],
    "regexp/no-empty-group": [
      2,
    ],
    "regexp/no-empty-lookarounds-assertion": [
      2,
    ],
    "regexp/no-empty-string-literal": [
      2,
    ],
    "regexp/no-escape-backspace": [
      2,
    ],
    "regexp/no-extra-lookaround-assertions": [
      2,
    ],
    "regexp/no-invalid-regexp": [
      2,
    ],
    "regexp/no-invisible-character": [
      2,
    ],
    "regexp/no-lazy-ends": [
      1,
    ],
    "regexp/no-legacy-features": [
      2,
    ],
    "regexp/no-misleading-capturing-group": [
      2,
    ],
    "regexp/no-misleading-unicode-character": [
      2,
    ],
    "regexp/no-missing-g-flag": [
      2,
    ],
    "regexp/no-non-standard-flag": [
      2,
    ],
    "regexp/no-obscure-range": [
      2,
    ],
    "regexp/no-optional-assertion": [
      2,
    ],
    "regexp/no-potentially-useless-backreference": [
      1,
    ],
    "regexp/no-super-linear-backtracking": [
      2,
    ],
    "regexp/no-trivially-nested-assertion": [
      2,
    ],
    "regexp/no-trivially-nested-quantifier": [
      2,
    ],
    "regexp/no-unused-capturing-group": [
      2,
    ],
    "regexp/no-useless-assertions": [
      2,
    ],
    "regexp/no-useless-backreference": [
      2,
    ],
    "regexp/no-useless-character-class": [
      2,
    ],
    "regexp/no-useless-dollar-replacements": [
      2,
    ],
    "regexp/no-useless-escape": [
      2,
    ],
    "regexp/no-useless-flag": [
      1,
    ],
    "regexp/no-useless-lazy": [
      2,
    ],
    "regexp/no-useless-non-capturing-group": [
      2,
    ],
    "regexp/no-useless-quantifier": [
      2,
    ],
    "regexp/no-useless-range": [
      2,
    ],
    "regexp/no-useless-set-operand": [
      2,
    ],
    "regexp/no-useless-string-literal": [
      2,
    ],
    "regexp/no-useless-two-nums-quantifier": [
      2,
    ],
    "regexp/no-zero-quantifier": [
      2,
    ],
    "regexp/optimal-lookaround-quantifier": [
      1,
    ],
    "regexp/optimal-quantifier-concatenation": [
      2,
    ],
    "regexp/prefer-character-class": [
      2,
    ],
    "regexp/prefer-d": [
      2,
    ],
    "regexp/prefer-plus-quantifier": [
      2,
    ],
    "regexp/prefer-predefined-assertion": [
      2,
    ],
    "regexp/prefer-question-quantifier": [
      2,
    ],
    "regexp/prefer-range": [
      2,
    ],
    "regexp/prefer-set-operation": [
      2,
    ],
    "regexp/prefer-star-quantifier": [
      2,
    ],
    "regexp/prefer-unicode-codepoint-escapes": [
      2,
    ],
    "regexp/prefer-w": [
      2,
    ],
    "regexp/simplify-set-operations": [
      2,
    ],
    "regexp/sort-flags": [
      2,
    ],
    "regexp/strict": [
      2,
    ],
    "regexp/use-ignore-case": [
      2,
    ],
    "require-atomic-updates": [
      0,
    ],
    "require-await": [
      0,
    ],
    "require-jsdoc": [
      0,
    ],
    "require-unicode-regexp": [
      0,
    ],
    "require-yield": [
      2,
    ],
    "rest-spread-spacing": [
      0,
      "never",
    ],
    "semi": [
      0,
      "always",
    ],
    "semi-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "semi-style": [
      0,
      "last",
    ],
    "simple-import-sort/exports": [
      1,
    ],
    "simple-import-sort/imports": [
      1,
    ],
    "sort-imports": [
      0,
      {
        "ignoreCase": false,
        "ignoreDeclarationSort": false,
        "ignoreMemberSort": false,
        "memberSyntaxSortOrder": [
          "none",
          "all",
          "multiple",
          "single",
        ],
      },
    ],
    "sort-keys": [
      0,
      "asc",
      {
        "caseSensitive": false,
        "natural": true,
      },
    ],
    "sort-vars": [
      0,
    ],
    "space-after-function-name": [
      0,
    ],
    "space-after-keywords": [
      0,
    ],
    "space-before-blocks": [
      0,
    ],
    "space-before-function-paren": [
      0,
      {
        "anonymous": "always",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "space-before-function-parentheses": [
      0,
    ],
    "space-before-keywords": [
      0,
    ],
    "space-in-brackets": [
      0,
    ],
    "space-in-parens": [
      0,
      "never",
    ],
    "space-infix-ops": [
      0,
    ],
    "space-return-throw-case": [
      0,
    ],
    "space-unary-ops": [
      0,
      {
        "nonwords": false,
        "overrides": {},
        "words": true,
      },
    ],
    "space-unary-word-ops": [
      0,
    ],
    "spaced-comment": [
      2,
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            ":",
            "::",
          ],
        },
        "line": {
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            "/",
          ],
        },
      },
    ],
    "standard/array-bracket-even-spacing": [
      0,
    ],
    "standard/computed-property-even-spacing": [
      0,
    ],
    "standard/object-curly-even-spacing": [
      0,
    ],
    "strict": [
      2,
      "never",
    ],
    "switch-colon-spacing": [
      0,
      {
        "after": true,
        "before": false,
      },
    ],
    "symbol-description": [
      2,
    ],
    "template-curly-spacing": [
      0,
    ],
    "template-tag-spacing": [
      0,
      "never",
    ],
    "unicode-bom": [
      2,
      "never",
    ],
    "unicorn/empty-brace-spaces": [
      0,
    ],
    "unicorn/escape-case": [
      2,
    ],
    "unicorn/no-hex-escape": [
      2,
    ],
    "unicorn/no-instanceof-array": [
      2,
    ],
    "unicorn/no-invalid-remove-event-listener": [
      2,
    ],
    "unicorn/no-nested-ternary": [
      0,
    ],
    "unicorn/no-new-buffer": [
      2,
    ],
    "unicorn/no-static-only-class": [
      2,
    ],
    "unicorn/no-typeof-undefined": [
      2,
    ],
    "unicorn/no-useless-spread": [
      2,
    ],
    "unicorn/number-literal-case": [
      0,
    ],
    "unicorn/numeric-separators-style": [
      2,
      {
        "onlyIfContainsSeparator": true,
      },
    ],
    "unicorn/prefer-array-find": [
      2,
    ],
    "unicorn/prefer-array-index-of": [
      2,
    ],
    "unicorn/prefer-array-some": [
      2,
    ],
    "unicorn/prefer-blob-reading-methods": [
      2,
    ],
    "unicorn/prefer-date-now": [
      2,
    ],
    "unicorn/prefer-default-parameters": [
      2,
    ],
    "unicorn/prefer-includes": [
      2,
    ],
    "unicorn/prefer-logical-operator-over-ternary": [
      2,
    ],
    "unicorn/prefer-native-coercion-functions": [
      2,
    ],
    "unicorn/prefer-node-protocol": [
      2,
    ],
    "unicorn/prefer-number-properties": [
      2,
    ],
    "unicorn/prefer-optional-catch-binding": [
      2,
    ],
    "unicorn/prefer-regexp-test": [
      2,
    ],
    "unicorn/prefer-string-starts-ends-with": [
      2,
    ],
    "unicorn/prefer-string-trim-start-end": [
      2,
    ],
    "unicorn/prefer-type-error": [
      2,
    ],
    "unicorn/template-indent": [
      0,
    ],
    "use-isnan": [
      2,
    ],
    "valid-jsdoc": [
      0,
    ],
    "valid-typeof": [
      0,
      {
        "requireStringLiterals": true,
      },
    ],
    "vars-on-top": [
      2,
    ],
    "vue/array-bracket-newline": [
      0,
    ],
    "vue/array-bracket-spacing": [
      0,
    ],
    "vue/array-element-newline": [
      0,
    ],
    "vue/arrow-spacing": [
      0,
    ],
    "vue/block-spacing": [
      0,
    ],
    "vue/block-tag-newline": [
      0,
    ],
    "vue/brace-style": [
      0,
    ],
    "vue/comma-dangle": [
      0,
    ],
    "vue/comma-spacing": [
      0,
    ],
    "vue/comma-style": [
      0,
    ],
    "vue/dot-location": [
      0,
    ],
    "vue/func-call-spacing": [
      0,
    ],
    "vue/html-closing-bracket-newline": [
      0,
    ],
    "vue/html-closing-bracket-spacing": [
      0,
    ],
    "vue/html-end-tags": [
      0,
    ],
    "vue/html-indent": [
      0,
    ],
    "vue/html-quotes": [
      0,
    ],
    "vue/html-self-closing": [
      0,
    ],
    "vue/key-spacing": [
      0,
    ],
    "vue/keyword-spacing": [
      0,
    ],
    "vue/max-attributes-per-line": [
      0,
    ],
    "vue/max-len": [
      0,
    ],
    "vue/multiline-html-element-content-newline": [
      0,
    ],
    "vue/multiline-ternary": [
      0,
    ],
    "vue/mustache-interpolation-spacing": [
      0,
    ],
    "vue/no-extra-parens": [
      0,
    ],
    "vue/no-multi-spaces": [
      0,
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": [
      0,
    ],
    "vue/object-curly-newline": [
      0,
    ],
    "vue/object-curly-spacing": [
      0,
    ],
    "vue/object-property-newline": [
      0,
    ],
    "vue/operator-linebreak": [
      0,
    ],
    "vue/quote-props": [
      0,
    ],
    "vue/script-indent": [
      0,
    ],
    "vue/singleline-html-element-content-newline": [
      0,
    ],
    "vue/space-in-parens": [
      0,
    ],
    "vue/space-infix-ops": [
      0,
    ],
    "vue/space-unary-ops": [
      0,
    ],
    "vue/template-curly-spacing": [
      0,
    ],
    "wrap-iife": [
      0,
      "outside",
      {
        "functionPrototypeMethods": false,
      },
    ],
    "wrap-regex": [
      0,
    ],
    "yield-star-spacing": [
      0,
      "after",
    ],
    "yoda": [
      2,
    ],
  },
}
`;
